Dryft/infra/k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dryft-postgres
  namespace: dryft
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  selector:
    app: dryft-postgres
  clusterIP: None
